Description
reactos-bootcd-0.4.15-dev-4946-ge9a129c-x86-gcc-lin-dbg
Use Explorer search function :

2 problems :
#1 => Right click > Rename works only on a few file but generally fails with :
CDefView.cpp:1482: Unexpected failure (hr)=80004005. |
#2 => F2 does not work as shortcut for "Rename" command and fails with (resp. DEL with VerbĀ 700fl)
err:(dll/win32/shell32/CDefaultContextMenu.cpp:1265) Unhandled Verb 704el |
CDefView.cpp:1482: Unexpected failure (hr)=80070057. |
Both (right click menu rename and F2/DEL) works fine in WinXPSP3
Attachments
Issue Links
- blocks
-
CORE-20250 [BROWSEUI] "rename" in Search Results slow performance and massive logspam
-
- Resolved
-
- is blocked by
-
CORE-20363 When I click folder in search list, explorer.exe crashes
-
- Open
-
- is duplicated by
-
CORE-18889 Possibility to rename file from search results
-
- Resolved
-