[BROWSEUI][SHELL32] Fixed FindFiles rename operation

CORE-18326