dll/win32/shell32/precomp.h
@@ -205,6 +205,8 @@ DCMA_InsertMenuItems(
 
 HRESULT
 SHELL32_DefaultContextMenuCallBack(IShellFolder *psf, IDataObject *pdo, UINT msg);
+PCSTR
+MapFcidmCmdToVerb(_In_ SIZE_T CmdId);
 UINT
 MapVerbToDfmCmd(_In_ LPCSTR verba);
 UINT
